# ruswacipher

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: crypto_benchmarks.rs  encryption_benchmark.rs  wasm_benchmarks.rs
docs/: api-reference.md  key-management-design.md  plugin_guide.md  security-guide.md  user-guide.md  wasm-build-guide.md
examples/advanced_app/: Cargo.toml  README.md  advanced.encrypted.wasm  advanced.rs  advanced.wasm  advanced.wasm.key  build.sh  index.html  loader.js  performance-test.html  run-test-server.sh  ruswacipher-runtime.js
examples/advanced_app/wat_files/: advanced.wat
js/: README.md  napi.d.ts  napi.js  package.json  tsconfig.json
js/examples/: webpack.config.js
js/native-binding/: Cargo.toml
js/native-binding/src/: lib.rs
js/src/: cli.ts  index.ts  main.ts  webpack-loader.ts  webpack-plugin.ts
scripts/: build-release.sh  build-wasm-robust.sh  obfuscate-loader.js  quick-start.sh  test-web-runtime.sh
src/: cli.rs  config.rs  error.rs  io.rs  lib.rs  main.rs
src/cli/: commands.rs  config.rs  mod.rs
src/crypto/: aes_gcm.rs  chacha20poly1305.rs  engine.rs  key_management.rs  mod.rs  traits.rs
src/crypto/algorithms/: mod.rs
src/crypto/algorithms/aes_gcm/: mod.rs
src/crypto/algorithms/chacha20poly1305/: mod.rs
src/crypto/plugins/: mod.rs
src/obfuscation/: basic.rs  control_flow.rs  engine.rs  function_split.rs  interpreter.rs  mod.rs  types.rs  variable_obfuscation.rs  virtualization.rs  vm.rs
src/runtime/: js_runtime.rs  mod.rs
src/wasm/: mod.rs  parser.rs  structure.rs  writer.rs
test-wasm/: Cargo.toml  build.sh
test-wasm/pkg/: test_wasm.js  test_wasm_bg.wasm
test-wasm/src/: lib.rs
tests/: control_flow_tests.rs  crypto_tests.rs  function_split_tests.rs  integration_tests.rs  js_runtime_tests.rs  obfuscation_tests.rs  plugin_tests.rs  vm_tests.rs  wasm_tests.rs
tests/samples/: complex.wasm  complex.wat  complex_obfuscated.wasm  simple.wasm  simple.wat
wasm-decryptor-helper/: Cargo.toml  build.sh
wasm-decryptor-helper/pkg/: wasm_decryptor_helper.js
wasm-decryptor-helper/src/: lib.rs
web/: README.md  mockKeyServer.js  obfuscation-research.md  package.json  test-aes.key  test-chacha.key  test-chacha.wasm.enc  test-config.json  test-enhanced.html  test.html  test.key  test.wasm  test.wasm.enc  wasm-decryptor-helper-wrapper.js  wasm-decryptor-helper.wasm  wasmGuardianLoader.js  wasmGuardianLoader.obfuscated.js  webpack.config.js
web/tests/: setup.js  wasmGuardianLoader.test.js
